test/validation/record/test-duplicate-member/p.pas
program test_duplicate_member;
type t = record
    i, j: integer;
    a, b: char;
    i, k: boolean;
end;
begin
end.
